# Logger

./: CMakeLists.txt  Logger.c  README.md
.github/workflows/: cmake-ci.yml
Tests/: CMakeLists.txt  main.c
Tests/Logger/: LoggerTest.h
include/: Logger.h
